# KVM-over-USB

./: README.md  README_en-us.md
.github/workflows/: client-release.yml  client_build.yml  code_checks.yml  release.yml  usb_kvm_client_release.yml
client/: compiler.ps1  controller_ch9329.py  controller_device.py  flake8.cfg  hid_device.py  keyboard_buffer.py  main.py  main_default_config.py  mouse_buffer.py  project_config.py  project_info.py  project_path.py  project_var.py  pyproject.toml  qodana.yaml  status_buffer.py  ui_about.py  ui_controller_device_setup.py  ui_custom_key.py  ui_indicator_lights.py  ui_paste_board.py  ui_video_device_setup.py  update_translate.ps1  usb_kvm_client.py
client/controller/: base.py  ch9329.py  general.py  kvm_card_mini.py  serial_device.py
client/data/: default_config.py  hex_convert.py  hex_data.py  keyboard.yaml  keyboard_ch9329_hid_map.py  keyboard_hid_code_to_key_name.py  keyboard_key_name_to_hid_code.py  keyboard_os_key_code_to_hid_code.py  keyboard_qt_key_value_to_hid_code.py  keyboard_scancode_to_hid_code.py  keyboard_shift_symbol.py  requirements.txt  requirements_for_posix.txt  requirements_for_windows.txt
client/script/: code_check.ps1  compiler.ps1  create_requirements.ps1  generate_file_list.py  update_translate.ps1
client/translate/: main_zh_cn.ts  main_zh_tw.ts  trans_zh_cn.qm  trans_zh_cn.ts
client/translations/: main_zh_cn.qm  main_zh_tw.qm
client/ui/: about.ui  about_ui.py  controller_device_setup.ui  controller_device_setup_ui.py  custom_key_ui.py  indicator_lights.ui  main.ui  main_ui.py  paste_board.ui  paste_board_ui.py  regenerate_ui.ps1  ui_about.py  ui_controller_device_setup.py  ui_custom_key.py  ui_indicator_lights.py  ui_main.py  ui_messagebox.py  ui_paste_board.py  ui_settings.py  ui_video_device_setup.py  video_device_setup.ui  video_device_setup_ui.py
client/ui/ui_resource/: about.ui  about_ui.py  controller_device_setup.ui  controller_device_setup_ui.py  custom_key.ui  custom_key_ui.py  indicator_lights_ui.py  main.ui  main_ui.py  paste_board_ui.py  regenerate_ui.ps1  settings.ui  settings_ui.py  video_device_setup_ui.py
document/: CH9329_series.md  CH9329_series_en.md  KVM-Card-Mini_series.md  KVM-Card-Mini_series_en.md  README_en.md
