[tool.poetry]
name = "usb_kvm_client"
version = "1.0.0.0"
description = "simple USB KVM client"
authors = ["wevsty <ty@wevs.org>"]
package-mode = false

[tool.black]
line-length = 80
target-version = ["py313"]
include = "\\.pyi?$"
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/.idea/.*
  | /build/.*
  | /ui_resource/.*
  | /data/.*
)
"""

[tool.poetry.dependencies]
python = "<3.14,>=3.12"
pyyaml = "^6.0.2"
loguru = "^0.7.2"
pywin32 = { version = ">=311", markers = "platform_system == 'Windows'" }
pyside6-addons = "^6.9.1"
pyside6-essentials = "^6.9.1"
pyside6 = "^6.9.1"
pywinhook = { version = "^1.6.2", markers = "platform_system == 'Windows'" }
pyserial = "^3.5"
nuitka = "^2.7.12"
pych9329 = "^0.1.6"
hidapi = "^0.14.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1"
isort = "^6.0.1"
flake8-bugbear = "^24.12.12"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
