[project]
authors = [
    {name = "wevsty", email = "ty@wevs.org"},
]
requires-python = "<3.15,>=3.12"
dependencies = [
    "pyyaml<7.0.0,>=6.0.3",
    "loguru<1.0.0,>=0.7.2",
    "pywin32>=311; platform_system == \"Windows\"",
    "pyside6-addons<7.0.0,>=6.10.1",
    "pyside6-essentials<7.0.0,>=6.10.1",
    "pyside6<7.0.0,>=6.10.1",
    "pywinhook<2.0.0,>=1.6.2; platform_system == \"Windows\"",
    "pyserial<4.0,>=3.5",
    "nuitka<3.0.0,>=2.8.9",
    "pych9329<1.0.0,>=0.1.6",
    "hidapi<1.0.0,>=0.15.0",
]
name = "usb_kvm_client"
version = "1.0.0.0"
description = "simple USB KVM client"

[dependency-groups]
dev = [
    "black<27.0,>=26.1.0",
    "isort<8.0.0,>=7.0.0",
    "flake8-bugbear<26.0.0,>=25.11.29",
]

[tool.black]
line-length = 80
target-version = ["py314"]
include = "\\.pyi?$"
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/.idea/.*
  | /.venv/.*
  | /build/.*
  | /ui_resource/.*
  | /data/.*
)
"""
